--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,6 +30,13 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "corretto"
+          java-version: "17"
+          cache: "gradle"
+
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
         with:
