--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-super-grid": "^6.0.1",
+    "react-native-upi-payment": "^1.0.5",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "yup": "^1.4.0"
